<resources>
    <string name="app_name">CodeNinjas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="codeninjas">CodeNinjas</string>
    <string name="choose_your_weapon">Choose your weapon</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="choose">CHOOSE</string>
    <string name="learn">Learn</string>
    <string name="code">Code</string>
    <string name="discuss">Discuss</string>
    <string name="change_weapon">Change weapon</string>
    <string name="challenge">Challenge</string>
    <string name="level">Level:</string>
    <string name="battles_won">Battles won:</string>
    <string name="battles_lost">Battles lost:</string>
    <string name="check_answer">check answer</string>
    <string name="are_you_sure_you_wan_t_to_give_up">Are you sure you wan\'t to give up ?</string>
    <string name="battle_summary">Battle summary</string>
    <string name="score">Score</string>
    <string name="question_of_the_day">Question of the day</string>
    <string name="top_scores">Top scores</string>
    <string name="welcome">Welcome</string>
    <string name="battle">Battle</string>
    <string name="other_programmers">Other programmers</string>
    <string name="top_ninjas_win_real_prices">Top Ninjas win real prices</string>
    <string name="finish">finish</string>
    <string name="start">START</string>
    <string name="learning_now">LEARNING NOW</string>
    <string name="and_become_a_developer">And become a developer</string>
    <string name="codeninja">CodeNinja</string>
    <string name="programmer">Programmer</string>
    <string name="to_the_best_place_to_learn_programming">To the best place to learn programming</string>
    <string name="next">next</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="kotlin">KOTLIN</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="token">Token</string>
    <string name="send_notification">Send Notification</string>
    <string name="codeninjas_challenged_you_in_a_battle_of_code">CodeNinjas challenged you in a battle of code!</string>
    <string name="what_is_the_output_of_the_following_code">What is the output of the following code?</string>
    <string name="no">No</string>
    <string name="plus_10_xp">Plus 10 XP</string>
    <string name="quick_knowledge">Quick knowledge</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="create_new_post">Create new post</string>
    <string name="body">Body...</string>
    <string name="create_post">create post</string>
    <string name="choose_image">Choose image</string>
</resources>