<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/learnFragment"
        android:icon="@drawable/ic_learn"
        android:title="@string/learn" />

    <item
        android:id="@+id/battleFragment"
        android:icon="@drawable/ic_battle"
        android:title="@string/battle" />

    <item
        android:id="@+id/codePlayGroundFragment"
        android:icon="@drawable/ic_curly_brackets"
        android:title="@string/code" />

    <item
        android:id="@+id/discussFragment"
        android:icon="@drawable/ic_discuss"
        android:title="@string/discuss" />

</menu>