<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContainerTitle"
        android:layout_marginTop="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_admin"
        app:startIconDrawable="@drawable/ic_discuss"
        app:endIconContentDescription="Message"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContainerMessage"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/etContainerTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_admin"
        app:startIconDrawable="@drawable/ic_discuss"
        app:endIconContentDescription="Message"
        android:hint="@string/message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContainerToken"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/etContainerMessage"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_admin"
        app:startIconDrawable="@drawable/ic_discuss"
        app:endIconContentDescription="Message"
        android:hint="@string/token">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etToken"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendNotification"
        app:layout_constraintTop_toBottomOf="@id/etContainerToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="75dp"
        app:icon="@drawable/ic_discuss"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:text="@string/send_notification"
        android:textColor="@color/white"
    />

</androidx.constraintlayout.widget.ConstraintLayout>