<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detailscreens.CreateNewPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCreateNewPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/ivPostImage"
                android:text="@string/create_new_post"
                android:fontFamily="@font/ninja_lazer"
                android:layout_marginTop="70dp"/>


            <ImageView
                android:id="@+id/ivPostImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintTop_toBottomOf="@id/tvCreateNewPost"
                android:src="@drawable/img_post_example"
                app:layout_constraintBottom_toTopOf="@id/etTitle"
                android:scaleType="centerCrop"
                android:layout_margin="24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/ivPostImage"
                android:layout_margin="24dp"
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/etBody"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:maxLength="1000"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/etTitle"
                android:layout_margin="24dp"
                app:layout_constraintBottom_toTopOf="@id/btnChooseImage"
                android:id="@+id/etBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="7"
                    android:minLines="3"
                    android:maxLength="500"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content"
                    />



            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnChooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="12dp"
                android:text="@string/choose_image"
                app:layout_constraintEnd_toStartOf="@id/btnCreatePost"
                app:layout_constraintBottom_toTopOf="@id/btnCreatePost"
                app:layout_constraintStart_toStartOf="parent"
                style="?attr/materialButtonOutlinedStyle"
                />

            <Button
                app:layout_constraintTop_toBottomOf="@id/btnChooseImage"
                app:layout_constraintEnd_toEndOf="parent"

                android:id="@+id/btnCreatePost"
                android:layout_width="match_parent"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="24dp"
                android:layout_height="wrap_content"
                android:text="@string/create_post"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>