<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="tech.gamedev.codeninjas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/learnFragment"
        android:name="tech.gamedev.codeninjas.ui.learn.LearnFragment"
        android:label="@string/learn"
        tools:layout="@layout/fragment_learn" >
        <action
            android:id="@+id/action_learnFragment_to_lessonDetailFragment"
            app:destination="@id/lessonDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/discussFragment"
        android:name="tech.gamedev.codeninjas.ui.discuss.DiscussFragment"
        android:label="@string/discuss"
        tools:layout="@layout/fragment_discuss" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="tech.gamedev.codeninjas.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_chooseWeaponFragment"
            app:destination="@id/chooseWeaponFragment" />
    </fragment>
    <fragment
        android:id="@+id/chooseWeaponFragment"
        android:name="tech.gamedev.codeninjas.ui.chooseweapon.ChooseWeaponFragment"
        android:label="fragment_choose_weapon"
        tools:layout="@layout/fragment_choose_weapon" >
        <action
            android:id="@+id/action_chooseWeaponFragment_to_navigation_home"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/codePlayGroundFragment"
        android:name="tech.gamedev.codeninjas.ui.codeplayground.CodePlayGroundFragment"
        android:label="fragment_code_play_ground"
        tools:layout="@layout/fragment_code_play_ground" />
    <fragment
        android:id="@+id/battleFragment"
        android:name="tech.gamedev.codeninjas.ui.battle.BattleFragment"
        android:label="fragment_battle"
        tools:layout="@layout/fragment_battle" >
        <action
            android:id="@+id/action_battleFragment_to_battleCountDownFragment"
            app:destination="@id/battleCountDownFragment" />
    </fragment>


    <fragment
        android:id="@+id/interviewQuestionsFragment"
        android:name="tech.gamedev.codeninjas.ui.detailscreens.InterviewQuestionsFragment"
        android:label="fragment_interview_questions"
        tools:layout="@layout/fragment_interview_questions" >
        <argument
            android:name="weapon"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_global_to_code_playground"
        app:destination="@id/codePlayGroundFragment" />

    <action
        android:id="@+id/action_global_to_interview_questions_fragment"
        app:destination="@id/interviewQuestionsFragment" />
    <fragment
        android:id="@+id/lessonDetailFragment"
        android:name="tech.gamedev.codeninjas.ui.detailscreens.LessonDetailFragment"
        android:label="fragment_lesson_detail"
        tools:layout="@layout/fragment_lesson_detail" >
        <argument
            android:name="lesson"
            app:argType="tech.gamedev.codeninjas.data.models.LessonAndQuestion" />
        <action
            android:id="@+id/action_lessonDetailFragment_to_questionDetailFragment"
            app:destination="@id/questionDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionDetailFragment"
        android:name="tech.gamedev.codeninjas.ui.detailscreens.QuestionDetailFragment"
        android:label="fragment_question_detail"
        tools:layout="@layout/fragment_question_detail" >
        <argument
            android:name="question"
            app:argType="tech.gamedev.codeninjas.data.models.LessonAndQuestion" />
    </fragment>
    <fragment
        android:id="@+id/battleCountDownFragment"
        android:name="tech.gamedev.codeninjas.ui.battle.BattleCountDownFragment"
        android:label="fragment_battle_count_down"
        tools:layout="@layout/fragment_battle_count_down" >
        <argument
            android:name="user1"
            app:argType="tech.gamedev.codeninjas.data.models.User" />
        <argument
            android:name="opponent"
            app:argType="tech.gamedev.codeninjas.data.models.User" />
        <action
            android:id="@+id/action_battleCountDownFragment_to_battleStartedFragment"
            app:destination="@id/battleStartedFragment" />
    </fragment>
    <fragment
        android:id="@+id/battleStartedFragment"
        android:name="tech.gamedev.codeninjas.ui.battle.BattleStartedFragment"
        android:label="fragment_battle_started"
        tools:layout="@layout/fragment_battle_started" >
        <argument
            android:name="user"
            app:argType="tech.gamedev.codeninjas.data.models.User" />
        <argument android:name="opponent"
            app:argType="tech.gamedev.codeninjas.data.models.User" />
        <action
            android:id="@+id/action_battleStartedFragment_to_finishedBattleFragment"
            app:destination="@id/finishedBattleFragment" />
    </fragment>

    <action
        android:id="@+id/action_global_to_battleFragment"
        app:destination="@id/battleFragment" />
    <fragment
        android:id="@+id/finishedBattleFragment"
        android:name="tech.gamedev.codeninjas.ui.battle.FinishedBattleFragment"
        android:label="fragment_finished_battle"
        tools:layout="@layout/fragment_finished_battle" >
        <argument
            android:name="score"
            app:argType="integer" />
        <argument
            android:name="user"
            app:argType="tech.gamedev.codeninjas.data.models.User" />
        <argument
            android:name="opponent"
            app:argType="tech.gamedev.codeninjas.data.models.User" />
    </fragment>
</navigation>