<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.battle.BattleFragment">

    <TextView
        android:id="@+id/tvBattle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:fontFamily="@font/ninja_lazer"
        android:textColor="@color/orange"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="120dp"
        android:text="Battle" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/ivBattleGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/battle_ground2"
        android:scaleType="fitXY"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChallengeUserContainer"
        app:layout_constraintBottom_toTopOf="@id/rvUsersAvailableForBattle"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="24dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/grey_dark"
        >

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBattleUserImageContainer"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/ivBattleUserProfileImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_example_user"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvBattleUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cvBattleUserImageContainer"
                android:fontFamily="@font/ninja_lazer"
                android:text="CodeNinjas"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center"
                android:textColor="@color/orange"
                android:layout_marginTop="12dp"/>

            <View
                android:id="@+id/lineVertical"
                android:layout_width="4dp"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tvBattleUserName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lineHorizontal2"
                android:background="@color/white"/>

            <View
                android:id="@+id/lineHorizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvBattleUserName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"/>


            <TextView
                android:id="@+id/tvBattleUserLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lineHorizontal"
                android:fontFamily="@font/ninja_lazer"
                android:text="@string/level"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/orange"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvBattleUserLevelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lineHorizontal"
                android:fontFamily="@font/ninja_lazer"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/lineVertical"
                app:layout_constraintEnd_toEndOf="parent"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/orange"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvBattlesWon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBattleUserLevel"
                android:fontFamily="@font/ninja_lazer"
                android:text="@string/battles_won"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"
                android:textColor="@color/orange"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvBattlesWonValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBattleUserLevelValue"
                android:fontFamily="@font/ninja_lazer"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/lineVertical"
                app:layout_constraintEnd_toEndOf="parent"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/orange"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvBattlesLost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBattlesWon"
                android:fontFamily="@font/ninja_lazer"
                android:text="@string/battles_lost"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/orange"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvBattlesLostValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBattlesWonValue"
                android:fontFamily="@font/ninja_lazer"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="@id/lineVertical"
                app:layout_constraintEnd_toEndOf="parent"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/orange"
                android:layout_marginTop="12dp"/>

            <View
                android:id="@+id/lineHorizontal2"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvBattlesLost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"/>


            <Button
                android:id="@+id/btnChallengeOpponent"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/lineHorizontal2"
                android:layout_height="wrap_content"
                android:text="@string/challenge"
                android:background="@drawable/btn_background"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/white"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/ninja_lazer"/>






        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsersAvailableForBattle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnBattleRandomOpponent"/>

    

    <Button
        android:id="@+id/btnBattleRandomOpponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Random opponent"
        android:background="@drawable/btn_background"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/ninja_lazer"/>

</androidx.constraintlayout.widget.ConstraintLayout>